--- a/SimonSays/app/src/main/res/layout/activity_main.xml
+++ b/SimonSays/app/src/main/res/layout/activity_main.xml
@@ -8,52 +8,54 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/buttonRed"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Red"
-        android:textAllCaps="false"
-        android:backgroundTint="@color/red"
-        android:onClick="onClickButton"/>
-
-    <Button
-        android:id="@+id/buttonGreen"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_toEndOf="@id/buttonRed"
-        android:text="Green"
-        android:textAllCaps="false"
-        android:backgroundTint="@color/dark_green"
-        android:onClick="onClickButton"/>
-
-    <Button
-        android:id="@+id/buttonBlue"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_below="@id/buttonRed"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Blue"
-        android:textAllCaps="false"
-        android:backgroundTint="@color/blue"
-        android:onClick="onClickButton"/>
-
-    <Button
         android:id="@+id/buttonYellow"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@+id/buttonGreen"
         android:layout_alignEnd="@+id/buttonGreen"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="-1dp"
         android:backgroundTint="@color/dark_yellow"
         android:onClick="onClickButton"
         android:text="Yellow"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/buttonGreen"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="8dp"
+        android:layout_toEndOf="@id/buttonRed"
+        android:backgroundTint="@color/dark_green"
+        android:onClick="onClickButton"
+        android:text="Green"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/buttonBlue"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_below="@id/buttonRed"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/blue"
+        android:onClick="onClickButton"
+        android:text="Blue"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/buttonRed"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/red"
+        android:onClick="onClickButton"
+        android:text="Red"
         android:textAllCaps="false" />
 
     <TextView
@@ -62,26 +64,36 @@
         android:layout_height="114dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="463dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginTop="411dp"
+        android:layout_marginEnd="58dp"
         android:text="Score: 0"
         android:textColor="@android:color/white"
         android:textSize="34sp" />
 
     <TextView
         android:id="@+id/textHighScore"
-        android:layout_width="181dp"
-        android:layout_height="71dp"
-        android:layout_below="@id/textScore"
+        android:layout_width="223dp"
+        android:layout_height="61dp"
+        android:layout_below="@+id/textScore"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="123dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="91dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginStart="127dp"
+        android:layout_marginTop="22dp"
         android:text="Highscore: 0"
         android:textColor="@android:color/white"
         android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textHighScoreToday"
+        android:layout_width="381dp"
+        android:layout_height="89dp"
+        android:layout_below="@+id/textHighScore"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="16dp"
+        android:text="Best Score Today: 0"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
 
 </RelativeLayout>
