--- a/SimonSays/app/src/main/res/layout/activity_main.xml
+++ b/SimonSays/app/src/main/res/layout/activity_main.xml
@@ -96,4 +96,15 @@
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
+    <!-- ImageView for the cross -->
+    <ImageView
+        android:id="@+id/crossImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/cross"
+        android:visibility="gone" />
+
+
 </RelativeLayout>
